--- a/modules/01_intro.qmd
+++ b/modules/01_intro.qmd
@@ -6,6 +6,12 @@ title: "Introduction to R and RStudio"
 
 This week, we'll get started with familiarizing ourselves with R and RStudio. You should come to class with software already installed on your laptop (see below for instructions). During class, we will learn how to interact the RStudio interface. We'll also talk about what reproducible scientific programming is, and how R markdown reports can be used to make your work reproducible, shareable, and one might even say, beautiful.
 
+::: {.callout-note icon="false"}
+## Key concepts
+
+R vs RStudio, base-R, package, function, argument, objects, environment (workspace), help, R markdown, script, knit, chunk, comments, project
+:::
+
 ## Readings and other preparation
 
 You should install R and RStudio before class. If you already have them installed, please update to the latest versions. Here are some directions on how to [install](https://psyteachr.github.io/ads-v3/app-installing-r.html) (or [update](https://psyteachr.github.io/ads-v3/app-updating-r.html)) these software packages.
@@ -20,12 +26,6 @@ For our first week, you do not to read ahead of the class period. But you should
 ## In-class exercises
 
 We will follow along with the examples given in the textbook. In addition, we will make sure everyone is set up with the software and with Canvas.
-
-::: {.callout-tip icon="false"}
-## Key concepts
-
-R vs RStudio, base-R, package, function, argument, objects, environment (workspace), help, R markdown, script, knit, chunk, comments, project
-:::
 
 ## Weekly assignment
 
