--- a/modules/02_programming-foundations-1.qmd
+++ b/modules/02_programming-foundations-1.qmd
@@ -6,6 +6,12 @@ title: "Programming Foundations Part 1"
 
 This week, we'll learn the building blocks of programming: How do we represent text, numbers, and vectors in a way that a machine can understand? How do we tell the computer what to do with those variables? In other words, we're going to learn how to "speak" the computer's language. Although here we'll focus specifically on the R language, many of these concepts are shared across programming languages.
 
+::: {.callout-note icon="false"}
+## Key concepts
+
+character, numeric, combine, vector, element, logical, logical indexing, `<-`, !`=` vs `==`, flow control, while loop, for loop, conditional statements, if statement
+:::
+
 ## Readings
 
 You should read these chapters before you come to class:
@@ -20,12 +26,6 @@ Don't worry, each chapter is short!
 ## In-class exercises
 
 We will follow along with the examples given in the textbook. Create an R project called `programming-foundations` for this section of the course, and save today's work in an R markdown report called `part-1.Rmd`.
-
-::: {.callout-tip icon="false"}
-## Key concepts
-
-character, numeric, combine, vector, element, logical, logical indexing, `<-`, !`=` vs `==`, flow control, while loop, for loop, conditional statements, if statement
-:::
 
 ## Weekly assignment
 
