--- a/modules/08_data-relations.qmd
+++ b/modules/08_data-relations.qmd
@@ -42,7 +42,7 @@ Solve the following problems using the concepts you have learned in class. As al
 
 4.  *Final project preparation:* Refer to the instructions for the final [project](../projects/final-project.html). You should get started on finding an openly available dataset. Please include in your Markdown report a link to the dataset and a link to the associated paper. If you are not ready to narrow it down, then include a few possible options. You can change your mind later.
 
-## **Chapter summary**
+## Chapter summary
 
 The chapter focuses on combining data from multiple tables (data frames) using `dplyr`'s join functions. The below summary was created in collaboration with Google Gemini.
 
