added haxby dataset to data tidying module

--- a/datasets/screentime.qmd
+++ b/datasets/screentime.qmd
@@ -1,6 +1,6 @@
 ## Paper
 
--   Przybylski, A. K., & Weinstein, N. (2017). A Large-Scale Test of the Goldilocks Hypothesis: Quantifying the Relations Between Digital-Screen Use and the Mental Well-Being of Adolescents. *Psychological Science*, 28(2), 204-215. https://doi.org/10.1177/0956797616678438
+-   Przybylski, A. K., & Weinstein, N. (2017). A Large-Scale Test of the Goldilocks Hypothesis: Quantifying the Relations Between Digital-Screen Use and the Mental Well-Being of Adolescents. *Psychological Science*, 28(2), 204-215. [link](https://doi.org/10.1177/0956797616678438)
 
 ## Open data
 
