update chapter summaries

--- a/datasets/haxby01.qmd
+++ b/datasets/haxby01.qmd
@@ -4,7 +4,7 @@
 
 ## Open data
 
-[Download](http://data.pymvpa.org/datasets/haxby2001/) a copy of the data.
+[Download](http://data.pymvpa.org/datasets/haxby2001/) a copy of the data. Or use our starter script below to download it through R.
 
 ## Description
 
