--- a/modules/10_statistical-analysis.qmd
+++ b/modules/10_statistical-analysis.qmd
@@ -4,15 +4,15 @@ title: "Statistical Analysis in R"
 
 ## Objectives
 
-Here's the objective for this week.
+We've made a lot of progress on working with data in R. Now what? In scientific research, we are interested in testing *hypotheses* and seeing whether the data are consistent with our hypotheses. In order to do this, we need to know how likely it is that we would have seen this pattern of data by chance (i.e., if our hypothesis wasn't true). That's what statistics are for! This week we will go over a few basic statistical tests that are commonly used in psychology and neuroscience research, and see how to implement them in R.
 
 ## Readings
 
-Link to textbook chapter
+There are no readings, but you can look at the [slides](../files/stats_slides.pdf) ahead of time.
 
 ## In-class exercises
 
-In-class exercises
+We will review basic statistical concepts and learn how to implement statistical tests in R. We will then apply these skills to an open-access psychology dataset.
 
 ## Weekly assignment
 
