machine learning module

--- a/modules/11_machine-learning.qmd
+++ b/modules/11_machine-learning.qmd
@@ -4,16 +4,22 @@ title: "Machine Learning"
 
 ## Objectives
 
-Here's the objective for this week.
+Multiple regression is a statistical technique used to understand how multiple predictor variables influence an outcome variable. It is widely used in psychology and neuroscience to examine relationships between brain activity, cognitive performance, and behavioral variables. This week we are going to learn how to implement a multiple regression model in R and interpret its results. We are also going to discuss how regression models can be used to generate predictions about what outcomes will be observed given a new set of data. This is a primary goal of "machine learning," a set of methods for using algorithms and statistical models to identify patterns in data and make predictions or decisions about those data.
+
+::: {.callout-note icon="false"}
+## Key concepts
+
+machine learning, multiple regression, predictors, outcomes, residuals, training set, testing set, cross-validation, generalizability
+:::
 
 ## Readings
 
-Link to textbook chapter
+No readings this week!
 
 ## In-class exercises
 
-In-class exercises
+We will review the concept of regression and how we can use regression to make predictions in a new set of data. We will then apply these skills to an open-access psychology dataset. [Download](../files/prediction.Rmd) the `prediction.Rmd` file to get started. You will also want to download this [csv file](../files/vivid_df_avg.csv), which contains summary data from the `vivid` dataset.
 
 ## Weekly assignment
 
-Here's the weekly assignment.
+TBD
