--- a/projects/final-project.qmd
+++ b/projects/final-project.qmd
@@ -26,6 +26,24 @@ Your markdown report should include a description of the research question, a li
 
 The end result should be a reproducible report that would allow another person to download the dataset and run your code to obtain the same results. You should include code that downloads the dataset directly from the internet to facilitate this process. You must upload both the Rmd file and the html file in order to receive full credit.
 
+## Report components
+
+Your final report should include the following:
+
+-   **A description of the research question, what the authors did, and what they found.** This should consist of at least one detailed paragraph.
+-   **A link to the paper.**
+-   **A link to the dataset.**
+-   **Code to directly download the data from the internet.** You can model this after the code we used in the stats module.
+-   **A table of summary statistics.** This can be modeled after a table included in the paper, or something you create on your own (e.g., if they don't have an appropriate table). An example of a summary stats table can be found [here](https://link-springer-com.proxy.bc.edu/article/10.3758/s13421-022-01291-5/tables/1).
+-   **A statistical analysis.** This should be modeled after one of the analyses reported in the paper. Example analyses include t-tests, ANOVAs, and regressions, all of which we covered in our stats module.
+-   **A data visualization.** This should reproduce a figure included in the paper, as close as you can get it. Please also include an **image of the original figure** from the paper.
+-   You are also welcome to include other visualizations that you think are interesting or helpful.
+-   Throughout, you should incorporate **concepts** that we have discussed in class.
+-   Throughout, you should include **Markdown subheaders and narrative text** (i.e., between your code chunks) to organize and describe what you are doing for each step and what you have found.
+-   In your code chunks, you should include **short comments** detailing the steps.
+-   You should submit both the **Rmd file** and the **knitted html file**.
+-   Any disclosures about **use of AI**. Remember that for this project, you should be using AI only for debugging purposes.
+
 ## Final presentation
 
 In the last two weeks of class, you will present your final project to the group. Your presentation should include:
